消費者債務清理條例 2011.12.12

--- a/司法-民事/消費者債務清理條例.md
+++ b/司法-民事/消費者債務清理條例.md
@@ -14,9 +14,9 @@
 
 > 釋：債務人為無行為能力人者，應由法定代理人代為意思表示並代受意思表示；為限制行為能力人者，為意思表示及受意思表示，應得法定代理人之允許，前者，實際行為人為其法定代理人，後者，法定代理人亦有決定權，本條例關於債務人應負義務及應受處罰之規定，如不擴張適用於法定代理人，無法達更生或清算程序清理債務之功能，爰設本條。
 
-* 5 更生及清算事件專屬債務人住所地之地方法院管轄。不能依前項規定定管轄法院者，由債務人主要財產所在地之地方法院管轄。
+* 5 更生及清算事件專屬債務人住所地或居所地之地方法院管轄。不能依前項規定定管轄法院者，由債務人主要財產所在地之地方法院管轄。
 
-> 釋：一、更生及清算事件，明定專屬債務人之住所地之法院管轄，爰設第一項。二、債務人在我國無住所者，則由主要財產所在地之地方法院管轄，以杜爭議，爰設第二項。
+> 釋：一、債務人之生活重心如未在其住所地，依原條文第一項規定，關於其更生或清算事件，係專屬其住所地之地方法院管轄，對債務人及其債權人均有所不便，宜增訂亦得由債務人居所地之地方法院管轄，以便利其等接近法院，爰修正第一項。二、原條文第二項未修正。
 
 * 5.1 地方法院應設消費者債務清理專庭或專股辦理消費者債務清理事件。
 
@@ -42,13 +42,17 @@
 
 > 釋：一、債務人之財產、收入及業務狀況，債務人之親屬、為債務人管理財產之人或其他關係人（例如：僱用人等）知之最詳，為確實掌握該部分資訊，明定渠等於法院查詢時，有答覆之義務，爰設第一項。二、為促使債務人之親屬、為債務人管理財產之人或其他關係人履行其答覆義務，渠等無故不為答覆或為虛偽之陳述時，法院得處以罰鍰並得連續處罰，爰設第二項、第三項。三、法院對債務人之親屬、為債務人管理財產之人或其他關係人處以罰鍰時，宜使其有陳述意見之機會，以保護其程序權，爰設第四項。四、第二項、第三項之裁定，影響被處罰人之權益甚大，爰設第五項，明定其提起抗告後，法院應停止執行。
 
-* 11 更生或清算事件之裁判，由獨任法官以裁定行之。抗告，由管轄之地方法院以合議裁定之。對於抗告法院之裁定，除有涉及法律見解具有原則上之重要性者外，不得再為抗告。依本條例所為之裁定，不得聲請再審。
+* 11 更生或清算事件之裁判，由獨任法官以裁定行之。抗告，由管轄之地方法院以合議裁定之。抗告法院之裁定，以抗告不合法而駁回者，不得再為抗告。但得向原法院提出異議。前項異議，準用民事訴訟法第四百八十四條第二項及第三項規定。除前二項情形外，對於抗告法院之裁定，僅得以其適用法規顯有錯誤為理由，向直接上級法院再為抗告。依本條例所為之裁定，不得聲請再審。
 
-> 釋：一、縱立法之初，為使更生或清算事件得以迅速確定，避免訴訟之累，抗告由管轄之地方法院以合議裁定之。二、惟本條例施行至今，按原條文雖收速審之效，然抗告之裁定在全國地方法院間尚無法統一見解。就事實相近案件，於不同管轄法院審理，易因法律見解歧異，而發生裁判矛盾，使債務人及債權人受不利益之裁定，爰增列第三項條文，如有涉及法律見解具有原則上之重要性者外，得再抗告。。
+> 釋：一、原條文第一項、第二項未修正。二、消費者債務清理事件屬廣義之非訟事件，有關再為抗告及管轄法院等事項，宜為一致之規定，爰參照非訟事件法第四十五條規定，增訂第三項、第四項，並將原條文第三項修正移列第五項。三、原條文第四項未修正，配合移列第六項。
 
-* 12 法院裁定開始更生或清算程序後，非經已申報無擔保及無優先權債權人全體同意，債務人不得撤回更生或清算之聲請。法院於裁定前，已依第十九條規定為保全處分者，亦同。更生或清算聲請之撤回，應以書狀為之。
+* 11.1 法院就更生或清算之聲請為駁回裁定前，應使債務人有到場陳述意見之機會。
 
-> 釋：一、為免債務人惡意利用更生或清算之聲請及保全處分，阻礙債權人行使權利，其撤回權之行使應予限制。惟其撤回如經已申報無擔保及無優先權債權人同意，應即無阻礙債權人行使權利情事，自無再予限制之必要。爰設第一項。二、為求慎重，更生或清算聲請之撤回，應以書狀提出於法院為之，爰設第二項。
+> 釋：一、本條新增。二、為保障更生或清算聲請程序債務人之聽審請求權，法院於裁定駁回更生或清算之聲請前，應使債務人有到場陳述意見之機會，爰設本條。
+
+* 12 法院裁定開始更生或清算程序後，非經已申報無擔保及無優先權債權人全體同意，債務人不得撤回更生或清算之聲請。法院於裁定前，已依第十九條規定為保全處分者，亦同。更生或清算聲請之撤回，應以書狀為之。第一項債權人自撤回書狀送達之日起，十日內未提出異議者，視為同意撤回。
+
+> 釋：一、原條文第一項、第二項未修正。二、實務上常見債務人撤回更生或清算之聲請時，債權人既不到場，亦不以書面表示意見，為便利債務人行使撤回權，並減輕債權人之負擔，明定債權人消極同意方式，爰增訂第三項。
 
 * 13 債務人依本條例聲請更生或清算者，債權人不得依破產法規定聲請宣告債務人破產。
 
@@ -62,9 +66,9 @@
 
 > 釋：關於更生或清算之程序，除本條例別有規定外，準用民事訴訟法之規定，爰設本條，俾利程序之進行有所依循。
 
-* 16 法院裁定開始更生或清算程序後，得命司法事務官進行更生或清算程序；必要時，得選任律師、會計師或其他適當之自然人或法人一人為監督人或管理人。法院認為必要時，得命監督人或管理人提供相當之擔保。監督人或管理人之報酬，由法院定之，有優先受清償之權。法院選任法人為監督人或管理人之辦法，由司法院定之。
+* 16 法院裁定開始更生或清算程序後，得命司法事務官進行更生或清算程序；必要時，得選任律師、會計師或其他適當之自然人或法人一人為監督人或管理人。法院認為必要時，得命監督人或管理人提供相當之擔保。監督人或管理人之報酬，由法院定之，有優先受清償之權。法院選任法人為監督人或管理人之辦法，由司法院定之。法院命司法事務官進行更生或清算程序，未選任監督人或管理人者，除別有規定或法院另有限制外，有關法院及監督人、管理人所應進行之程序，由司法事務官為之。法院裁定開始更生或清算程序後，未選任監督人或管理人，亦未命司法事務官進行更生或清算程序者，除別有規定外，有關監督人或管理人之職務，由法院為之。
 
-> 釋：一、本條例於更生程序設監督人，清算程序設管理人。又更生或清算程序之進行，涉及法律、會計事務甚多，為顧及實際所需，爰設第一項，明定法院於必要時，得選任律師、會計師或其他適當之自然人或法人為監督人或管理人。其選任之時間，非限於法院裁定開始更生或清算程序時始得為之，於更生或清算程序進行中，如法院認有必要者，亦得於程序進行中隨時選任。為求周延，法院選任前，宜先徵詢被選任人之意願。二、消費者債務清理，本即因債務人無資力而無法清償債務，如選任專業之監督人或管理人，債務人將因程序之進行而另需支付高額報酬，不啻係另一負擔，故監督人或管理人非必設機關。惟為兼顧債務人之權益，並利程序之進行，宜使司法事務官協助法官進行之，爰設第一項，明定法院裁定開始更生或清算程序後，得命司法事務官進行更生或清算程序。惟更生或清算程序進行中，如有必要，例如：有第二十四條所定雙務契約應處理；或有第二十七條所定訴訟需進行；或須介入當事人間之法律關係時，即不宜由司法事務官進行，應選任律師、會計師或其他適當之人任監督人或管理人，以利程序進行。三、為免監督人或管理人恣意濫權，以及保障債權人、債務人於監督人或管理人違反義務致生損害時之求償權，爰設第二項，明定法院得命監督人或管理人提供擔保。四、監督人或管理人職權重大，故其所得之報酬應特予保障，爰設第三項，明定其報酬應由法院訂定，並有優先受償權。五、法院選任法人為監督人或管理人者，該法人及其指派之人員應具債務清理之專業知識及能力，為免繁瑣，有關選任法人為監督人或管理人相關事項，宜由司法院定之，爰設第四項。
+> 釋：一、原條文未修正。二、法院裁定開始更生或清算程序，未選任監督人或管理人者，有關法院及監督人、管理人所應進行之程序，由司法事務官為之；亦未命司法事務官進行更生或清算程序者，則由法院為之，法院辦理消費者債務清理事件應行注意事項第十點第三款及第五款已有規定，為使其有法律之依據，爰增訂第五項、第六項。
 
 * 17 監督人或管理人應受法院之指揮、監督。法院得隨時命其為清理事務之報告，及為其他必要之調查。法院得因債權人會議決議或依職權撤換監督人或管理人。但於撤換前，應使其有陳述意見之機會。
 
@@ -114,13 +118,13 @@
 
 > 釋：一、債權於法院裁定開始更生或清算前成立者，屬本條例清理之債權，爰設第一項，明定其為更生或清算債權。二、更生及清算程序，均係集團性債務清理程序，原則上既不許債權人在程序外行使權利，亦不認未依程序申報債權者得受清償，據以達成債權人公平受償及賦與債務人免責、更生之程序目的，爰設第二項。
 
-* 29 下列各款債權為劣後債權，僅得就其他債權受償餘額而受清償：一、法院裁定開始更生或清算程序後所生之利息。二、因法院裁定開始更生或清算程序後不履行債務所生之損害賠償及違約金。有擔保或優先權債權之損害賠償及違約金，亦同。三、罰金、罰鍰、怠金及追徵金。前項第三款所定債權，於法律有特別規定者，依其規定。債權人參加更生或清算程序所支出之費用，不得請求債務人返還之。
+* 29 下列各款債權為劣後債權，僅得就其他債權受償餘額而受清償；於更生或清算程序終止或終結後，亦同：一、法院裁定開始更生或清算程序後所生之利息。二、因法院裁定開始更生或清算程序後不履行債務所生之損害賠償及違約金。有擔保或優先權債權之損害賠償及違約金，亦同。三、罰金、罰鍰、怠金、滯納金、滯報金、滯報費、怠報金及追徵金。前項第三款所定債權，於法律有特別規定者，依其規定。債權人參加更生或清算程序所支出之費用，不得請求債務人返還之。
 
-> 釋：一、法院裁定開始清算或更生程序後，所生之利息、債務人因債務不履行所生之損害賠償及違約金，均屬法院裁定開始清算或更生程序後所生之債權。又有擔保或優先權之債權，其損害賠償及違約金如發生於法院裁定開始更生或清算程序之後，如使之仍有優先受償之權，對於債務人未免過苛，為求公允，亦將之列為劣後債權。另替補性賠償為原約定給付之替代，其非屬上開所稱不履行債務所生之損害賠償之範圍，乃屬當然，不待明文規定。再者，國家對債務人之財產罰，如得與其他債權相同，就債務人之財產取償，對債務人雖無不利，惟將使其他債權人蒙受損害，實不宜與其他債權平等受償。爰於第一項明定上開債權列為後順位之劣後債權，僅得就其他債權受清償餘額而受清償。二、國家對債務人之財產罰，如其他法律別有規定為優先順位之債權者，應從該法之規定，爰訂定第二項，以杜爭議。三、債權人參加更生或清算程序所支出之費用，因屬實現個人財產權之手段而生者，本不宜請求債務人返還之，爰訂定第三項，以期明確。
+> 釋：一、原條文第一項規定之劣後債權，僅得就其他債權受償餘額而受清償，此項效力，不因更生或清算程序終止或終結而受影響，為免爭議，宜予明定，爰修正第一項序文。二、行政執行法施行細則第二條第一款規定之滯納金、滯報金、滯報費、怠報金等均屬國家或地方自治團體對債務人之公法上債權，本現行第一項第三款規定之立法趣旨，此等債權解釋上應認亦屬劣後債權，為免爭議，予以明定，爰修正第一項第三款。又於本條例修正施行前債務人已經法院裁定開始更生或清算程序者，其所欠之滯納金等債務當然有修正後第一項第三款之適用，不待明文。惟依第五十五條第一項第一款、第一百三十八條第一款規定，上開公法上債權，僅罰金、罰鍰、怠金及追徵金為不免責債權，其餘仍為免責債權，附此敘明。三、第二項、第三項未修正。
 
-* 30 數人就同一給付各負全部履行之責任者，其中一人或數人或其全體受法院開始更生或清算程序之裁定時，債權人得就其債權於裁定時之現存額，對各更生債務人或清算財團行使權利。
+* 30 數人就同一給付各負全部履行之責任者，其中一人或數人或其全體受法院開始更生或清算程序之裁定時，債權人得就其債權於裁定時之現存額，對各更生債務人或清算財團行使權利。保證人受法院開始更生或清算程序之裁定時，債權人得就其債權於裁定時之現存額行使權利。
 
-> 釋：數人就同一給付各負全部履行之責任者，如其中一人或數人或其全體受法院開始更生或清算程序之裁定，債權人僅得就其債權於裁定時之現存額，對各更生債務人或清算財團行使權利，蓋債權人之債權既已受部分清償，於清償範圍內，其債權即已消滅，自不得於更生或清算程序再行回復而列為更生或清算債權，爰設本條，以杜爭議。
+> 釋：一、原條文未修正，移列第一項。二、保證人經法院裁定開始更生或清算程序時，債權人如須待主債務人不履行債務，或對其執行無效果時，始得對保證人行使權利，恐因逾申報或補報債權期限而無法於程序中行使權利，為兼顧保證人之權益及債權人受償之公平性，保證債務之補充性宜酌予限制，明定債權人得就其債權於裁定時之現存額申報債權，而不受民法第七百三十九條及第七百四十五條等規定之限制，惟其權利之實現，則依更生或清算程序之規定行之，爰增訂第二項。
 
 * 31 數人就同一給付各負全部履行之責任者，其中一人或數人受法院開始更生或清算程序之裁定時，其他共同債務人得以將來求償權總額為債權額而行使其權利。但債權人已以更生或清算程序開始時之現存債權額行使權利者，不在此限。前項規定，於為債務人提供擔保之人及債務人之保證人準用之。
 
@@ -130,13 +134,17 @@
 
 > 釋：一、匯票發票人或背書人受法院開始更生或清算程序之裁定時，付款人或預備付款人未必知悉，倘其因善意而承兌或付款者，為保障其求償權，應使該債權得為更生或清算債權，爰設第一項。二、於支票及其他以給付金錢或其他物件為標的之有價證券者，與第一項同有保護之必要，爰設第二項。
 
-* 33 債權人應於法院所定申報債權之期間內申報債權之種類、數額、順位之說明書；其有證明文件者，並應提出之。債權人為金融機構、資產管理公司時，應依前項規定提出債權說明書，並於說明書中表明下列事項：一、尚未清償之債權本金及借款日。二、利息及違約金之金額及其計算方式。三、債務人已償還金額。四、前款金額抵充費用、利息、本金之數額。五、其他債務人請求之事項，經法院認為適當者。債權人申報債權或補報債權未依前項第一款至第三款規定提出債權說明書者，法院應依債務人之聲請，以裁定定期命債權人補正。逾期未補正者，法院依第三十六條為裁定時，依全辯論意旨斟酌之。債權人因非可歸責於己之事由，致未於第一項所定期間申報債權者，得於其事由消滅後十日內補報之。但不得逾法院所定補報債權之期限。監督人或管理人收受債權申報，應於補報債權期限屆滿後，編造債權表，由法院公告之，並應送達於債務人及已知住居所、事務所或營業所之債權人。未選任監督人或管理人者，前項債權表，由法院編造之。
+* 32.1 附期限之債權未到期者，於法院裁定開始更生或清算程序時，視為已到期。法院裁定開始更生或清算程序後始到期之債權無利息者，其債權額應扣除自法院裁定開始更生或清算程序時起至到期時止之法定利息。
 
-> 釋：按法院訴訟輔導科擬定債權人之債權陳報狀參考範例，僅可得知本金、利息、違約金等債權總額，無法清楚呈現債務全貌、實質內容。為使債務人明瞭其所負擔之債務計算方式、及使法院可有詳確依據，爰明訂債權人應提供債權說明書及其應記載事項。
+> 釋：一、本條新增。二、為保障債權人得透過集團性之債務清理程序公平受償，並達債務清理之目的，原條文第一百十一條第二項、第三項關於附期限之債權視為已到期，及開始清算程序後始到期之債權無利息者，應扣除中間利息之規定，於更生程序中亦應適用，爰移列本條第一項、第二項，並酌作文字修正。
 
-* 34 消滅時效，因申報債權而中斷。
+* 33 債權人應於法院所定申報債權之期間內提出債權說明書，申報其債權之種類、數額及順位；其有證明文件者，並應提出之。債權人為金融機構、資產管理公司者，前項債權說明書並應表明下列事項：一、尚未清償之債權本金及債權發生日。二、利息及違約金之金額及其計算方式。三、債務人已償還金額。四、前款金額抵充費用、利息、本金之數額。五、其他債務人請求之事項，經法院認為適當者。前項債權人未依前項規定提出債權說明書者，法院應依債務人之聲請，以裁定定期命債權人補正。逾期未補正者，法院依第三十六條為裁定時，依全辯論意旨斟酌之。債權人因非可歸責於己之事由，致未於第一項所定期間申報債權者，得於其事由消滅後十日內補報之。但不得逾法院所定補報債權之期限。債權人申報債權逾申報期限者，監督人或管理人應報由法院以裁定駁回之。但有前項情形者，不在此限。監督人或管理人收受債權申報，應於補報債權期限屆滿後，編造債權表，由法院公告之，並應送達於債務人及已知住居所、事務所或營業所之債權人。未選任監督人或管理人者，前項債權表，由法院編造之。
 
-> 釋：依民法第一百二十九條第二項第三款規定，消滅時效，因申報和解債權或破產債權而中斷，債權人依本條例所定更生或清算程序申報債權者，其性質與上開申報和解債權或破產債權相同，其時效亦應因之中斷，爰設本條。
+> 釋：一、原條文第一項文字易遭誤解為債權人申報債權時應申報債權順位之說明書；另第二項序文規定債權人為金融機構、資產管理公司時，依第一項規定提出債權說明書，並於說明書中表明之事項，其文字亦有重複情形，又金融機構及資產管理公司之債權非僅有借款債權，爰修正第一項、第二項序文及第一款。二、原條文第三項未規定債權人申報債權未表明第二項第四款、第五款事項之效果，及僅金融機構及資產管理公司申報債權始有第二項適用之意旨，宜予明定，爰修正第三項。三、第四項未修正。四、債權人申報債權逾申報期限之法律效果，宜予明定。又債權人補報債權不符第四項規定者，其申報債權亦屬逾申報期限，此際監督人或管理人應報由法院以裁定駁回申報，如未選任監督人或管理人者，法院自應逕以裁定駁回之，爰增訂第五項。五、原條文第五項、第六項未修正，配合移列第六項、第七項。
+
+* 34 消滅時效，因申報債權而中斷。時效之期間終止時，因非可歸責於債權人之事由，致不能依前項規定中斷其時效者，自其妨礙事由消滅時起，一個月內，其時效不完成。
+
+> 釋：一、原條文未修正，移列第一項。二、時效開始進行後，因本條例所生法律上障礙，致請求權不能行使，例如因不可歸責於債權人之事由，致逾補報債權之期間未申報債權，不得依更生、清算程序行使權利，亦不得於程序外行使權利。倘此法律上障礙延續至時效期間終止時尚未排除，參照民法第一百三十九條規定意旨，宜認自該障礙排除時起，一個月內，其時效不完成，爰增訂第二項。
 
 * 35 債權人對於債務人之特定財產有優先權、質權、抵押權、留置權或其他擔保物權者，仍應依本條例規定申報債權。監督人或管理人於必要時，得請求前項債權人交出其權利標的物或估定其價額。債權人無正當理由而不交出者，監督人或管理人得聲請法院將該標的物取交之。
 
@@ -186,13 +194,13 @@
 
 > 釋：更生程序係為保護有更生誠意之債務人而設，債務人如曾依本條例或破產法之規定而受刑之宣告；或經法院認可和解、更生或調協，因可歸責於己之事由，致未履行其條件；或不配合法院而為協力行為等，即足認其欠缺清理債務之誠意，且無聲請更生之真意，自無加以保護之必要，爰設本條，明定更生開始之障礙事由。
 
-* 47 法院裁定開始更生程序後，應即將下列事項公告之：一、開始更生程序裁定之主文及其年、月、日、時。二、選任監督人者，其姓名、住址；監督人為法人者，其名稱、法定代理人及事務所或營業所。三、申報、補報債權之期間及債權人應於期間內向監督人申報債權；未選任監督人者，應向法院為之；其有證明文件者，並應提出之。四、不依前款規定申報、補報債權之失權效果。五、對於已申報、補報債權向法院提出異議之期間。六、召集債權人會議者，其期日、處所及應議事項。前項第三款申報債權之期間，應自開始更生程序之翌日起，為十日以上二十日以下；補報債權期間，應自申報債權期間屆滿之翌日起二十日以內。第一項公告及債權人清冊應送達於已知住居所、事務所或營業所之債權人，該公告另應送達於債務人。債權人清冊已記載之債權人，視為其已於申報債權期間之首日為與清冊記載同一內容債權之申報。
+* 47 法院裁定開始更生程序後，應即將下列事項公告之：一、開始更生程序裁定之主文及其年、月、日、時。二、選任監督人者，其姓名、住址；監督人為法人者，其名稱、法定代理人及事務所或營業所。三、申報、補報債權之期間及債權人應於期間內向監督人申報債權；未選任監督人者，應向法院為之；其有證明文件者，並應提出之。四、不依前款規定申報、補報債權之失權效果。五、對於已申報、補報債權向法院提出異議之期間。六、召集債權人會議者，其期日、處所及應議事項。前項第三款申報債權之期間，應自開始更生程序之翌日起，為十日以上二十日以下；補報債權期間，應自申報債權期間屆滿之翌日起二十日以內。債權人依第二十六條第一項規定行使權利者，前項申報債權之期間，應自契約終止或解除之翌日起算。但申報或補報債權不得逾債權人會議可決更生方案或法院裁定認可更生方案日之前一日。第一項公告及債權人清冊應送達於已知住居所、事務所或營業所之債權人，該公告另應送達於債務人。債權人清冊已記載之債權人，視為其已於申報債權期間之首日為與清冊記載同一內容債權之申報。
 
-> 釋：一、法院於裁定開始更生程序後，應將開始更生程序裁定之主文及其時點、監督人之姓名及地址、申報及補報債權期間、異議期間、失權效果、債權人會議期日及處所等事項公告，使債權人、債務人及其他利害關係人有所知悉，俾便申報債權、出席債權人會議，以利更生程序之進行，爰設第一項，明定法院應公告之事項。二、為求更生程序迅速進行，法院應訂定申報債權、補報債權之期間，爰設第二項。三、第一項公告之事項及債務人所提之債權人清冊對於債權人、債務人之權益影響重大，該等公告及清冊自宜送達於已知住居所、事務所或營業所之債權人，公告另應送達於債務人，俾渠等有所知悉，爰設第三項。四、為簡化債權申報程序，債務人提出之債權人清冊已載明債權人及其債權內容者，視為債權人已於申報期間首日為同一內容之申報，爰設第四項。又已記載於債權人清冊之債權，既已視為申報，債權人未依限申報者，亦不生失權之效果。
+> 釋：一、原條文第一項、第二項未修正。二、法院裁定開始更生程序時，債務人所定雙務契約，當事人一方尚未完全履行，監督人終止、解除契約時，可能已逾本條第二項規定之債權申報及補報期間，為使債權人得依第二十六條第一項規定行使權利，增訂此種情形之申報債權期間之起算日。又債務人所提更生方案如經債權人會議可決，或未經債權人會議可決而由法院依第六十四條第一項逕以裁定認可，為維程序安定，自不宜許債權人再為申報或補報債權，並為免債權人之申報與債權人會議之可決或法院之裁定認可，在時間上孰先孰後，滋生紛擾，明定其申報或補報債權期限之末日，爰增訂第三項。三、原條文第三項、第四項未修正，配合移列第四項、第五項。
 
-* 48 法院裁定開始登記更生程序後，就債務人之財產依法應登記者，應通知該管登記機關為登記。法院裁定開始更生程序後，對於債務人不得開始或繼續訴訟及強制執行程序。但有擔保或有優先權之債權，不在此限。
+* 48 法院裁定開始更生程序後，就債務人之財產依法應登記者，應通知該管登記機關為登記。法院裁定開始更生程序後，對於債務人不得開始或繼續訴訟及強制執行程序。但有擔保或有優先權之債權，不在此限。
 
-> 釋：一、本條文既規定法院裁定開始更生程序後，對於債務人不得開始或繼續訴訟及強制執行程序，為保護交易安全，避免造成債權人或第三人遭受不利益，如債務人之財產依法應登記者，應由法院通知該管登記機關為登記, 爰建議增訂第一項規定「法院裁定開始更生程序後，就債務人之財產依法應登記者，應通知該管登記機關為登記。」，爰設第一項。二、為便利更生之進行及避免程序重複，法院裁定開始更生程序後，對於債務人即不得開始或繼續訴訟及強制執行程序（包括：民事執行程序、行政執行程序），爰設本條。惟有擔保或有優先權之債權，其聲請強制執行之程序倘對更生程序無礙，經法院許可後，不應妨礙其實現權利，設但書予以除外，爰設第二項。
+> 釋：一、原條文第一項「法院裁定開始登記更生程序後」中「登記」二字為贅文，爰予刪除。二、原條文第二項未修正。
 
 * 49 監督人之職務如下：一、調查債務人之財產、收入及業務狀況，並向法院提出書面報告。二、協助債務人作成更生方案。三、試算無擔保及無優先權債權，於法院裁定開始更生程序時，依清算程序所得受償之總額。四、其他依本條例規定或法院指定之事項。第十條之規定，於監督人調查債務人之財產、收入及業務狀況時準用之。但受查詢人為個人而有正當理由者，不在此限。未選任監督人時，法院得定期命債務人提出財產及收入狀況報告書。
 
@@ -210,13 +218,17 @@
 
 > 釋：一、債權人對於債務人負有債務者，為避免其債權依更生程序僅得受部分清償，而其所負債務卻應為全部清償之不公平現象，亦為防止債權人於更生程序開始後競相對於債務人負債務，俾主張抵銷而獲十足清償，致更生方案履行困難，爰明定得為抵銷者，以法院裁定開始更生程序前對於債務人所負之債務，且該債務於債權補報期間屆滿前得為抵銷者為限。另為免債權人抵銷權之行使，左右更生方案之內容，影響更生程序之進行，爰明定抵銷權之行使，應於債權補報期間屆滿前向債務人為之，始生抵銷之效力。又為使監督人或法院知悉債權人是否行使抵銷權，以編造債權表，爰另明定債權人行使抵銷權時，應通知監督人或向法院陳報。二、債權人已知有更生聲請後而對債務人負債務；債務人之債務人在法院裁定開始更生程序後，對於債務人取得債權或取得他人之更生債權，或已知有更生聲請後而取得債權，如許其行使抵銷權，影響其他債權人公平受償，爰設第二項，明定不得抵銷之債權。惟債權人負債務及債務人之債務人取得債權係基於法定原因或基於其知悉以前所生之原因者，則無惡意，爰設但書予以除外。
 
-* 53 債務人應於補報債權期間屆滿後十日內提出更生方案於法院。更生方案應記載下列事項：一、清償之金額。二、三個月給付一次以上之分期清償方法。三、最終清償期，自認可更生方案裁定確定之翌日起不得逾六年。但有特別情事者，得延長為八年。債務人未依限提出更生方案者，法院得裁定開始清算程序。債務人就第四十三條、第四十四條所定之事項，無法為完全之陳述或表明者，法院裁定開始更生程序後，債務人於必要時，得向直轄市或縣（市）政府申請協助作成更生方案。前項申請之程序及相關辦法，由司法院會同行政院定之。
+* 53 債務人應於收受債權表後十日內提出更生方案於法院。更生方案應記載下列事項：一、清償之金額。二、三個月給付一次以上之分期清償方法。三、最終清償期，自認可更生方案裁定確定之翌日起不得逾六年。但更生方案定有自用住宅借款特別條款，或債務人與其他有擔保或有優先權之債權人成立清償協議，或為達第六十四條第二項第三款、第四款之最低清償總額者，得延長為八年。普通保證債權受償額未確定者，以監督人估定之不足受償額，列入更生方案，並於債權人對主債務人求償無效果時，按實際不足受償額，依更生條件受清償。債權人或債務人對前項估定金額有爭議者，準用第三十六條第一項至第四項規定。債務人未依限提出更生方案者，法院得裁定開始清算程序。債務人就第四十三條、第四十四條所定之事項，無法為完全之陳述或表明者，法院裁定開始更生程序後，債務人於必要時，得向直轄市或縣（市）政府申請協助作成更生方案。前項申請之程序及相關辦法，由司法院會同行政院定之。
 
-> 釋：一、查本條例之條文立法過程，甚為強調當事人自主協商與自主解決之精神，由落實消費者程序處分權之觀點出發，使消費者與金融事業機構透過交互磋商協議，來決定如何處理並重新形成雙方之債務債權利益狀態。惟參諸國內實務案件可知，陷入債務不能清償之虞的債務人，多為心思考慮較為輕率、財務規劃欠缺經驗之消費者，在通常情形之下，實難以期待債務人具有與債權人（多為金融事業機構）平等協商之地位與能力。二、消費者債務清理條例屬自然人之破產法，其更生方案需由法院裁定。故有關債務人欲申請協助作成更生方案之時機，仍應限於法院裁定開始更生程序後，債務人於必要時申請協助作成更生方案，爰增訂第四項規定。三、增訂第五項規定本條申請相關程序事項，由司法院會同行政院定之。
+> 釋：一、原條文第一項規定債務人應於補報債權期間屆滿後十日內提出更生方案，惟因債務人於補報債權期間屆滿時尚未收受債權表，致其提出之更生方案所載金額易有誤漏，而須再為更正，故明定債務人應於收受債權表後十日內提出更生方案，爰修正第一項。二、原條文第二項第三款但書所稱特別情事，係指債務人之更生方案定有自用住宅借款特別條款，或與其他有擔保或有優先權之債權人成立清償協議，通常將減少普通債權人之受清償額度，為免普通債權人之受償因此受到不利影響；或為使債務人之清償額可達第六十四條第二項第三款、第四款之最低清償總額，即有延長更生方案最終清償期之必要。為避免此項規定遭誤用，該延長更生方案最終清償期之特別情事宜予明定，爰修正第二項第三款。三、債務人所負普通保證債務，應由監督人依主債務人之財產、收入狀況及清償能力，估定債權人之不足受償額，而以該估定金額列入更生方案，且於債權人不足受償額確定後，方可依更生方案所定清償比例受清償，為求明確，爰增訂第三項及第四項，明定普通保證債權列入更生方案受償之方式，及債權人或債務人對監督人估定不足受償額有爭議時，準用第三十六條第一項至第四項之規定解決。又債權人實際不足受償額少於或多於估定金額，均可按實際不足受償額依更生方案所定清償比例受清償，但對其他債權人之受償不生影響，如債務人因此受影響致履行困難時，則為債務人是否依第七十五條第一項規定聲請延長履行期限之問題，附此敘明。四、原條文第三項至第五項未修正，配合移列第五項至第七項。
 
 * 54 債務人得與自用住宅借款債權人協議，於更生方案定自用住宅借款特別條款。但自用住宅另有其他擔保權且其權利人不同意更生方案者，不在此限。
 
 > 釋：為使負有自用住宅借款債務而瀕臨經濟困境之債務人，不必喪失其賴以居住之自用住宅而重建經濟生活，特設自用住宅借款特別條款制度，使債務人得於更生方案訂定以自用住宅借款延緩清償為內容之自用住宅借款特別條款，債務人如依該特別條款繼續清償，即可避免擔保權之行使。又債務人於提出該定有特別條款之更生方案前，如能與自用住宅借款債權人協議，必能作成適切之方案，有助於日後方案之履行，爰明定債務人得與自用住宅借款債權人協議，於更生方案就自用住宅借款債權定自用住宅借款特別條款。惟於自用住宅另有其他非擔保自用住宅借款之擔保權，且該權利人不同意更生方案時，即無法避免該債權人聲請拍賣自用住宅，於此情形，訂定該特別條款即無任何實益，爰設但書予以除外。
+
+* 54.1 自用住宅借款特別條款不能依前條規定協議時，該借款契約雖有債務人因喪失期限利益而清償期屆至之約定，債務人仍得不受其拘束，逕依下列各款方式之一定之：一、就原約定自用住宅借款債務未清償之本金、已到期之利息及法院裁定開始更生程序前已發生之違約金總額，於原約定最後清償期前，按月平均攤還，並於各期給付時，就未清償本金，依原約定利率計付利息。二、於更生方案所定最終清償期屆至前，僅就原約定自用住宅借款債務未清償本金，依原約定利率按月計付利息；該期限屆至後，就該本金、前已到期之利息及法院裁定開始更生程序前已發生之違約金總額，於原約定最後清償期前，按月平均攤還，並於各期給付時，就未清償本金，依原約定利率計付利息。自用住宅借款債務原約定最後清償期之殘餘期間較更生方案所定最終清償期為短者，得延長至該最終清償期。債務人依前二項期限履行有困難者，得再延長其履行期限至六年。依前項延長期限者，應就未清償本金，依原約定利率計付利息。
+
+> 釋：一、本條新增。二、債務人如未能依本條例第五十四條規定與債權人就自用住宅借款特別條款之內容達成協議，為避免債務人喪失其賴以居住之自用住宅，爰明定自用住宅借款特別條款之最低標準，使債務人得於該標準以上之範圍內，自行擬定此特別條款。三、為協助負有自用住宅借款債務而瀕臨經濟困境之債務人重建經濟生活，並兼顧自用住宅借款債權人之權益，明定自用住宅借款特別條款法定內容，及於自用住宅借款特別條款，不能依第五十四條規定協議時，縱該借款契約有因喪失期限利益而清償期屆至之約定（例如：約定分期清償者，債務人一期遲延給付，視為全部到期之定），債務人亦不受該約定之拘束，而得逕行訂定自用住宅借款特別條款。其內容之一係將原約定自用住宅借款債務未清償之本金、已到期之利息、法院裁定開始更生程序前已發生之違約金等債務加總後，於原約定最後清償期前，按月平均攤還，並於各期給付時，就未清償本金，依原約定利率計付利息；其內容之二係於更生方案所定最終清償期屆至前，僅就原約定自用住宅借款債務未清償本金，依原約定利率按月計付利息，最終清償期屆至後，再將該本金、前已到期之利息及法院裁定開始更生程序前已發生之違約金等債務加總後，於原約定最後清償期前，按月平均攤還，並於各期給付時，就未清償本金，依原約定利率計付利息，爰設第一項。又原約定最後清償期短於或等於更生方案所定最終清償期之情形，除符合第三項規定延長履行期限，而使該期間較更生方案所定最終清償期為長者外，僅能依第一項第一款規定定其自用住宅借款特別條款之內容，尚無適用第一項第二款規定之餘地，附此敘明。四、自用住宅借款契約殘餘之清償期間較依第五十三條第二項第三款所定期間為短者，如依該殘餘期間計算債務人每月應攤還金額，債務人恐無力清償，為確保更生方案之履行，明定自用住宅借款之清償期限得延長至第五十三條第二項第三款所定之最終清償期，爰設第二項。五、債務人依第一項、第二項所定期限定自用住宅借款特別條款時，如其履行仍有困難，為免其喪失賴以居住之自用住宅而無法重建經濟生活，明定其於更生方案定自用住宅借款特別條款時，得將前二項規定之履行期限再延長。惟為兼顧自用住宅借款債權人之權益，其延長期限不宜過長，僅得再延長履行期限至六年，爰設第三項。六、債務人延長履行期限，已獲得期限利益，其於延長期限內，就未清償之本金，自應依原約定利率計付利息，以保障自用住宅借款債權人之權益，爰設第四項。
 
 * 55 下列債務，非經債權人之同意，不得減免之：一、罰金、罰鍰、怠金及追徵金。二、債務人因故意侵權行為所生損害賠償之債務。三、債務人履行法定扶養義務之費用。前項未經債權人同意減免之債務，於更生方案所定清償期間屆滿後，債務人仍應負清償責任。
 
@@ -242,21 +254,21 @@
 
 > 釋：一、為促進更生程序，宜使法院得採行書面決議方式可決更生方案，且其方式係以消極同意之方式為之，亦即除債權人於法院所定期間內以書面確答不同意者外，均視為同意更生方案，爰設第一項。二、法院採行書面決議方式可決更生方案，係將原由債權人開會決議之事項，改以書面方式決議之，其目的均在確認債權人是否可決債務人所提之更生方案，爰設第二項，明定書面決議結果，同意及視為同意之已申報無擔保及無優先權債權人過半數，且其所代表之債權額，逾已申報無擔保及無優先權總債權額二分之一時，即生債權人會議可決更生方案之擬制效果。三、法院採行書面決議及債權人會議決議是否可決更生方案，其目的既均為確認債權人是否可決債務人所提之更生方案，其決議條件及有表決權債權人人數、債權額數之計算基準允宜一致，爰設第三項，明定本條例第六十條第二項、第三項規定，於法院採行書面決議方式可決更生方案之情形準用之。
 
-* 61 更生方案未依前二條規定可決時，除有第六十四條規定之情形外，法院應以裁定開始清算程序。
+* 61 更生方案未依前二條規定可決時，除有第十二條、第六十四條規定情形外，法院應以裁定開始清算程序。法院為前項裁定前，應使債權人、債務人有陳述意見之機會。第一項裁定得為抗告，並於裁定確定時，始得進行清算程序。
 
-> 釋：更生方案未經債權人會議或書面決議可決時，除有第六十五條所定法院得以裁定認可更生方案之情形外，更生程序已不能繼續，為清理債務人之債務，宜由法院斟酌情形，以裁定開始清算程序，爰設本條。
+> 釋：一、依第一條、第十二條規定，債務清理程序除為債務人利益外，應兼顧債權人之權利保障。法院裁定開始更生程序後，如經已申報無擔保及無優先權債權人全體同意債務人撤回更生之聲請，即不繼續進行債務清理程序，爰修正第一項。二、又法院依第一項規定裁定開始清算程序前，應向債權人、債務人曉諭更生程序轉換為清算程序之效果，使彼等有陳述意見之機會，俾保障雙方選擇是否進行清算程序之權利，爰增訂第二項。三、債務人爭執其有第十二條、第六十四條所定情形，而不應受法院開始清算程序之裁定者，應使其有救濟途徑，爰增訂第三項。
 
 * 62 更生方案經可決者，法院應為認可與否之裁定。法院為認可之裁定時，因更生方案履行之必要，對於債務人在未依更生條件全部履行完畢前之生活程度，得為相當之限制。第一項裁定應公告之，認可之裁定應送達於不同意更生方案之債權人；不認可之裁定應送達於債務人。對於第一項認可之裁定提起抗告者，以不同意更生方案之債權人為限。
 
 > 釋：一、為免多數債權人恣意操控更生方案之內容，影響債務人及其他債權人之權益，更生方案經債權人會議可決後，仍應由法院就更生方案之內容是否公允、有無違反本條例第六十四條規定情事等加以審查，而為認可與否之裁定，以保障債務人及全體債權人之權益，爰設第一項。二、為促使債務人履行更生方案，並教育其合理消費觀念，法院為認可更生方案之裁定時，因更生方案履行之必要，對於債務人在未依更生條件全部履行完畢前之生活程度得為相當之限制，爰設第二項。又債務人之生活程度一經限制，債務人即應遵守，如有違反致更生方案履行困難，即屬可歸責於己之事由，而不得依第七十六條規定聲請延長履行期限或免責；如嗣後經法院裁定開始清算程序，亦有可能經法院為不免責之裁定（第一百三十五條第八款參照），而無法享免責之利益。三、法院所為更生方案認可與否之裁定應公告之，以使所有利害關係人有所知悉。又不同意更生方案之債權人對於認可之裁定，及債務人對於不認可之裁定，分別得提起抗告，利害關係重大，為利渠等判斷，自有將裁定送達之必要，爰設第三項。四、法院認可更生方案之裁定，影響債務人及債權人之權益至鉅，債權人不同意更生方案時，應使之有救濟途徑，爰設第四項，明定不同意更生方案之債權人得對法院認可之裁定提起抗告。
 
-* 63 有下列情形之一者，法院應不認可更生方案：一、債權人會議可決之更生方案對不同意或未出席之債權人不公允。二、更生程序違背法律規定而不能補正。三、更生方案違反法律強制或禁止規定，或有背於公共秩序、善良風俗。四、以不正當方法使更生方案可決。五、已申報無擔保及無優先權之債權總額逾新臺幣一千二百萬元。六、更生方案定有自用住宅借款特別條款，而債務人仍有喪失住宅或其基地之所有權或使用權之虞。七、更生方案所定自用住宅借款特別條款非依第五十四條協議成立。八、更生方案無履行可能。九、債務人有虛報債務、隱匿財產，或對於債權人中之一人或數人允許額外利益，情節重大。前項第五款所定債權總額，司法院得因情勢需要，以命令增減之。
+* 63 有下列情形之一者，除有第十二條規定情形外，法院應以裁定不認可更生方案：一、債權人會議可決之更生方案對不同意或未出席之債權人不公允。二、更生程序違背法律規定而不能補正。三、更生方案違反法律強制或禁止規定，或有背於公共秩序、善良風俗。四、以不正當方法使更生方案可決。五、已申報無擔保及無優先權之債權總額逾新臺幣一千二百萬元。六、更生方案定有自用住宅借款特別條款，而債務人仍有喪失住宅或其基地之所有權或使用權之虞。七、更生方案所定自用住宅借款特別條款非依第五十四條或第五十四條之一規定成立。八、更生方案無履行可能。九、債務人有虛報債務、隱匿財產，或對於債權人中之一人或數人允許額外利益，情節重大。前項第五款所定債權總額，司法院得因情勢需要，以命令增減之。第六十一條第二項規定，於第一項情形準用之。
 
-> 釋：一、更生方案經債權人會議可決，法院原則上應予認可，為免更生方案對部分債權人不利或更生方案、更生程序有不合法情事，明定法院應不認可更生方案之情形。(一)為維護少數債權人之權益，債權人會議可決之更生條件對不同意或未出席會議之債權人不公允者，法院應不予認可，爰設第一款。(二)更生程序違背法律規定，例如：非債權人出席債權人會議並參加表決、決議程序違背法律規定等情形，如屬不能補正，法院應不認可更生方案，爰設第二款。(三)更生方案之內容違反法律強制或禁止規定，或有背於公共秩序、善良風俗者，均屬無效，法院應不予認可，爰設第三款。(四)債務人或債權人以不正當方法，例如詐欺、脅迫等，使更生方案可決者，法院亦不應認可，以避免債務人或債權人遂行其不法，影響他人權益，爰設第四款。(五)債務人負債總額若過大，其因更生程序而被免責之負債額即相對提高，此對債權人造成之不利益過鉅，為保障債權人之權益，法院應不認可更生方案，爰設第五款。(六)債務人以其自用住宅為擔保設定數順位抵押權，而其所擔保之債權，除自用住宅借款債權外，另包括其他債權之情形（例如：為他人提供擔保或為擔保其他借款債權而設定抵押權等），更生方案縱定有自用住宅借款特別條款，亦無法避免其他抵押權之行使，債務人仍有喪失住宅或其基地之所有權或使用權之可能，於此情形，更生方案恐無履行之可能，法院自不應認可更生方案，爰設第六款。(七)更生程序係債務人依其所提方案履行，減免部分責任後，促其更生之程序，更生方案如無履行之可能，法院自無認可其更生方案之必要，爰設第七款。(八)債務人有虛報債務、隱匿財產，或對於債權人中之一人或數人允許額外利益，且情節重大情事，債權人因未能查悉而可決更生方案時，為避免更生制度遭濫用，並防止事後再行撤銷更生，造成程序浪費，法院應不認可更生方案，爰設第八款。二、第一項第五款所定債權總額，其金額如何始屬適當，應視我國經濟、國民所得成長及物價波動情形而定，為免輕重失衡，宜授權司法院得因應整體經濟及社會需求等情勢，以命令增減該金額，爰設第二項。
+> 釋：一、法院依原條文第一項規定不認可更生方案時，為達為債務人清理債務目的，避免程序浪費，並兼顧債權人權利，應依第六十五條第一項規定裁定開始清算程序，惟依第十二條規定，債務人經無擔保及無優先權債權人全體同意，仍得撤回更生之聲請，爰修正第一項序文。二、配合第五十四條之一增訂自用住宅借款特別條款之規定，爰修正第一項第七款。三、原條文第二項未修正。四、法院為第一項裁定前，應準用第六十一條第二項規定，使債權人、債務人有陳述意見之機會，俾保障雙方選擇是否進行清算程序之權利，爰增訂第三項。
 
-* 64 債務人有薪資、執行業務所得或其他固定收入，法院認更生方案之條件公允者，得不經債權人會議可決，逕依債務人之聲請或依職權以裁定認可更生方案。有下列情形之一者，法院不得為前項之認可：一、債務人於七年內曾依破產法或本條例規定受免責。二、有前條第一項各款情形之一。三、無擔保及無優先權債權受償總額，顯低於法院裁定開始更生程序時，依清算程序所得受償之總額。四、無擔保及無優先權債權受償總額，低於債務人聲請更生前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額。法院為第一項認可裁定前，應將更生方案之內容及債務人之財產及收入狀況報告書通知債權人，並使債權人有陳述意見之機會。
+* 64 債務人有薪資、執行業務所得或其他固定收入，依其收入及財產狀況，可認更生方案之條件已盡力清償者，法院應以裁定認可更生方案。債務人無固定收入，更生方案有保證人、提供擔保之人或其他共同負擔債務之人，法院認其條件公允者，亦同。有下列情形之一者，法院不得為前項之認可：一、債務人於七年內曾依破產法或本條例規定受免責。二、有前條第一項各款情形之一。三、無擔保及無優先權債權受償總額，顯低於法院裁定開始更生程序時，依清算程序所得受償之總額。四、無擔保及無優先權債權受償總額，低於債務人聲請更生前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額。法院為第一項認可裁定前，應將更生方案之內容及債務人之財產及收入狀況報告書通知債權人，並使債權人有陳述意見之機會。
 
-> 釋：一、債務人如有薪資、執行業務所得等固定收入，並將其可處分所得之一定部分充為清償，於債權人之權益已有保障，其更生程序應更為簡易、迅速。故債務人提出之更生方案，倘法院認為其條件公允，得不待債權人會議可決，逕依債務人之聲請或依職權以裁定認可之，爰設第一項。二、為確保債權人之權益，明定不得逕行認可更生方案之事由。(一)債務人七年內曾依破產法或本條例所定程序減免責任，現經濟復瀕臨破產而擬進行更生程序，顯見其經濟狀況、理財能力等非無斟酌餘地，則有關債務人清償能力如何、能否依更生方案履行、該更生方案應否可決等事項，宜由債權人自行決定，不應由法院逕行裁定認可，爰設第一款。(二)有第六十四條第一項各款情形之一者，法院本即不應認可更生方案，舉重以明輕，法院自無逕行裁定認可更方案之餘地，爰設第二款。(三)更生程序係以債務人將來有繼續性及反覆性收入之望為前提，立法鼓勵債務人利用更生程序，避免清算程序，無非在於更生程序對於債權人較為有利，可使債權人獲得較高之清償額數，而債務人復得以藉更生程序獲得重建，倘無擔保及無優先權債權於更生程序所得受償之總額，顯低於法院裁定開始更生程序時，依清算程序可能受償之總額，即與上開立法本旨相違，為保障債權人之權益，法院自不應逕行認可更生方案，爰設第三款。(四)無擔保及無優先權債權受償總額低於債務人聲請更生前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額者，債權人受償額數過低，對於債權人造成之不利益過鉅，法院自不應逕行認可更生方案，爰設第四款。又所謂依法應受其扶養者所必要生活費用之數額，乃指債務人對於依民法負有法定扶養義務之親屬或家屬，實際上已支付必要生活費用者而言。三、更生方案之內容攸關債權人之權利變動及債務人之債務履行情形，對債權人之權益影響甚鉅，為保障債權人之程序權及實體權，並使法院正確判斷有無逕行裁定認可更生方案之必要，應賦與債權人獲得一定資訊及陳述意見之機會，爰設第三項，明定法院逕行裁定認可更生方案前，應將更生方案之內容及監督人或債務人依本條例第四十九條規定所提債務人之財產及收入狀況報告書通知債權人，並使債權人有陳述意見之機會。惟債權人所為之陳述，僅供法院判斷是否逕行裁定認可更生方案之參考，並無拘束法院之效力。
+> 釋：一、原條文第一項規定更生方案是否公允，除須考量債務人已否盡力清償外，並及其負債之原因、過往之消費有無不當之情形，實務上法院常因債務人有不當負債或消費之情形，而無從依該項規定逕行認可更生方案。為使此等債務人仍有更生復甦之機會，明定如債務人所提更生方案之條件依其收入及財產狀況，已盡力清償者，例如債務人之財產有清算價值者，加計其可處分所得總額；無清算價值者，以其可處分所得總額，扣除其自己及依法應受其扶養者所必要生活費用後之餘額，均已用於清償情形，法院即應以裁定認可更生方案。又債務人無固定收入，更生方案有保證人、提供擔保之人或其他共同負擔債務之人，法院斟酌債務人之財產狀況、清償數額及擔保是否確實，而認更生方案之條件公允者，亦宜逕行認可之，爰修正第一項。二、原條文第二項、第三項未修正。
 
 * 65 法院裁定不認可更生方案時，應同時裁定開始清算程序。對於不認可更生方案之裁定提起抗告者，前項開始清算程序之裁定，並受抗告法院之裁判。第一項裁定確定時，始得進行清算程序。
 
@@ -294,13 +306,13 @@
 
 > 釋：更生方案經法院裁定認可確定後，對於全體債權人均有效力，為本條例第六十八條所明定，則於債務人依更生條件全部履行完畢後，除本條例別有規定外，例如：第五十六條之非免責債權等，同意及不同意更生條件之債權人均不得再就已申報之債權未受清償部分，另向債務人請求，爰明定債權人已申報之債權未受清償部分，視為消滅，以符合更生之本質及鼓勵債務人利用更生程序清理債務，達重建復甦之旨。又為促使債權人於更生程序申報債權，俾於更生程序統一清理債務，以利債務人重建，債權人未於更生程序申報債權者，於債務人依更生條件全部履行完畢後，該未申報之債權，亦應視為消滅。惟債權人因不可歸責於己之事由，致未於更生程序申報或補報債權，如亦令其債權視為消滅，未免不公，爰設但書予以除外，明定債務人仍應依更生條件負履行之責，以兼顧該債權人之權益。
 
-* 74 更生方案經法院裁定認可確定後，債務人未依更生條件履行者，債權人得以之為執行名義，聲請對債務人及更生之保證人、提供擔保之人或其他共同負擔債務之人為強制執行。但債權人之債權有第三十六條之異議，而未裁定確定者，不在此限。債權人聲請對債務人為強制執行時，法院得依債務人之聲請或依職權裁定開始清算程序。
+* 74 更生方案經法院裁定認可確定後，債務人未依更生條件履行者，債權人得以之為執行名義，聲請對債務人及更生之保證人、提供擔保之人或其他共同負擔債務之人為強制執行。但債權人之債權有第三十六條之異議，而未裁定確定者，不在此限。債權人聲請對債務人為強制執行時，法院得依債務人之聲請裁定開始清算程序。
 
-> 釋：一、更生方案經法院裁定認可確定後，為達督促債務人履行更生條件之目的，應賦與債權人得以該更生方案及法院認可裁定為執行名義，聲請對債務人強制執行之權。又為求迅速清理債務，執行名義之效力應使擴張及於更生之保證人、提供擔保之人或其他共同負擔債務之人。爰設本條。惟債權人所申報之債權及其種類、數額或順位，業經監督人、債務人或其他利害關係人依本條例第三十六條規定提出異議，而未經裁定確定者，其債權之存否、受償順位等即仍有爭執，自難准其逕為強制執行之聲請，爰設但書予以除外。二、債權人以債務人未依更生條件履行為由，依第一項規定聲請強制執行時，如債務人已無清償能力，且其債權人尚有多數，宜由法院依債務人之聲請或依職權，斟酌債務人之財產狀況及不能清償債務情形，裁定開始清算程序，以統一清理其債務，爰設第二項。又法院斟酌情形，發現債權人人數僅一、二人，或債務人尚未清償之數額所剩無幾，為免開始清算程序後，債權人之債權及其依更生條件所受之清償，復須重行計算、重行分配，造成程序浪費，並影響其他債權人之權益，自有權裁量不予開始清算程序。
+> 釋：一、原條文第一項未修正。二、債權人聲請對債務人為強制執行時，更生程序業已終結，此際，債務人是否欲以清算程序清理其債務，宜尊重其選擇，法院不必依職權介入，爰修正第二項。
 
-* 75 更生方案經法院裁定認可確定後，債務人因不可歸責於己之事由，致履行顯有困難者，得聲請法院裁定延長其履行期限。但延長之期限不得逾二年。前項延長期限顯有重大困難，債務人對各債權人之清償額已達原定數額四分之三，且無擔保及無優先權債權受償總額已逾依清算程序所得受償之總額時，法院得依債務人之聲請，為免責之裁定。但於裁定前，應使債權人有陳述意見之機會。前二項規定，於定自用住宅借款特別條款之債權不適用之。
+* 75 更生方案經法院裁定認可確定後，債務人因不可歸責於己之事由，致履行有困難者，得聲請法院裁定延長其履行期限。但延長之期限不得逾二年。債務人可處分所得扣除自己及依法應受其扶養者所必要生活費用之餘額，連續三個月低於更生方案應清償之金額者，推定有前項事由。第一項延長期限顯有重大困難，債務人對各債權人之清償額已達原定數額四分之三，且無擔保及無優先權債權受償總額已逾依清算程序所得受償之總額時，法院得依債務人之聲請，為免責之裁定。但於裁定前，應使債權人有陳述意見之機會。前三項規定，於定自用住宅借款特別條款之債權不適用之。
 
-> 釋：一、更生方案經法院裁定認可確定後，債務人因病住院、失業或其他未能預料之情事發生，致更生方案履行顯有困難時，應賦與債務人救濟之道，始能貫徹更生之意旨，爰明定債務人因不可歸責於己之事由，致更生方案履行顯有困難時，得聲請法院裁定延長其履行期限。又為求更生程序之迅速進行，避免延長履行期限影響債權人之權益及債務人之重建，延長之期限宜予限制，爰明定延長之履行期限不得逾二年。至債務人因違反第六十三條第二項規定，致更生方案履行困難，即有可歸責於己之事由，自不得依本條規定聲請延長履行期限或免責。二、更生方案履行顯有困難，即便法院延長其期限，亦無履行之可能時，更生程序已屬不能繼續，原宜由法院斟酌情形，以裁定開始清算程序。惟更生方案履行困難如不可歸責於債務人，且其對各債權人之清償額復已達原定數額四分之三，無擔保及無優先權債權受償總額亦已逾依清算程序所得受償之總額，此際，債權人之權益實已獲得保障，如強令債務人開始清算程序，剝奪其更生之機會，未免過苛，爰明定法院得依債務人之聲請，以裁定免除該未依更生方案履行之債務。惟上開免除債務之裁定對債權人之權益影響甚鉅，為保障債權人之程序權及實體權，應賦與其陳述意見之機會，爰明定法院於裁定前，應使債權人有陳述意見之機會。三、本條第一項、第二項所定困難免責之情形僅適用於無擔保及無優先權之債權，有關自用住宅借款債權之履行方式，例如：履行期限是否延長等，應由債務人於定自用住宅借款特別條款時，依第五十四條與債權人協議，或依第五十五條所定履行方式定之，尚無本條第一項、第二項之適用，為臻明確，爰設第三項。
+> 釋：一、原條文第一項未修正。二、債務人可處分所得扣除自己及依法應受其扶養者所必要生活費用之餘額，連續三個月低於更生方案應清償之金額者，宜減輕其舉證責任，推定係因不可歸責於己之事由，致履行顯有重大困難。如債權人主張其係可歸責於債務人之事由所致者，應由債權人另行舉證。爰增訂第二項。三、原條文第二項、第三項配合第二項之增訂作文字修正，並移列第三項、第四項。
 
 * 76 自法院認可更生方案之翌日起一年內，發見債務人有虛報債務、隱匿財產，或對於債權人中之一人或數人允許額外利益之情事者，法院得依債權人之聲請裁定撤銷更生，並應同時裁定開始清算程序。對於撤銷更生之裁定提起抗告者，前項開始清算程序之裁定，並受抗告法院之裁判。第一項裁定確定時，始得進行清算程序。
 
@@ -342,9 +354,9 @@
 
 > 釋：一、債務人之財產不敷清償清算程序費用時，仍應開始清算程序，使其有依本條例取得免責而重建經濟生活之機會。惟因債務人之財產已不敷清償清算程序之費用，為免程序浪費，明定法院應同時以裁定終止清算程序，爰設第一項。二、法院裁定開始清算程序，並同時終止清算程序後，債務人即有免責之機會，此影響債權人之權益甚鉅，為保障渠等之權益，自應賦與債權人對同時終止清算程序之裁定得提起抗告救濟，爰設第二項。又法院終止清算程序後，債務人之債務並非當然免除，仍應由法院斟酌本條例有關免責之規定，例如：第一百三十四條、第一百三十五條、第一百三十六條等，依職權認定之，故法院終止清算程序後，債務人雖有免責之機會，惟其財產不敷清償清算程序之費用如係因本條例所定不可免責之事由所致（如：浪費、賭博等），法院即非當然為免責之裁定，債務人就其所負債務仍應負清償之責。三、法院開始並同時終止清算程序之裁定，對於債權人、債務人之權益影響甚鉅，自應公告之，以使渠等有所知悉。又債權人對於同時終止清算程序之裁定既得提起抗告，為利其判斷，該等裁定並應送達於已知之債權人。爰設第三項。
 
-* 86 法院裁定開始清算程序後，應公告下列事項：一、開始清算程序裁定之主文及其年、月、日、時。二、選任管理人者，其姓名、住址及處理清算事務之地址。管理人為法人者，其名稱、法定代理人及事務所或營業所。三、債務人之債務人及屬於清算財團之財產持有人，對於債務人不得為清償或交付其財產，並應即交還或通知管理人或法院指定之人。如於申報債權之期間，無故不交還或通知者，對於清算財團因此所受之損害，應負賠償責任。四、申報、補報債權之期間及債權人應於申報、補報期間內向管理人申報其債權；未選任管理人者，應向法院為之；其有證明文件者，並應提出之。五、不依前款規定申報、補報債權之失權效果。六、對於已申報、補報債權向法院提出異議之期間。七、召集債權人會議者，其期日、處所及應議事項。第四十七條第二項至第四項之規定，於前項情形準用之。
+* 86 法院裁定開始清算程序後，應公告下列事項：一、開始清算程序裁定之主文及其年、月、日、時。二、選任管理人者，其姓名、住址及處理清算事務之地址。管理人為法人者，其名稱、法定代理人及事務所或營業所。三、債務人之債務人及屬於清算財團之財產持有人，對於債務人不得為清償或交付其財產，並應即交還或通知管理人或法院指定之人。如於申報債權之期間，無故不交還或通知者，對於清算財團因此所受之損害，應負賠償責任。四、申報、補報債權之期間及債權人應於申報、補報期間內向管理人申報其債權；未選任管理人者，應向法院為之；其有證明文件者，並應提出之。五、不依前款規定申報、補報債權之失權效果。六、對於已申報、補報債權向法院提出異議之期間。七、召集債權人會議者，其期日、處所及應議事項。第四十七條第二項至第五項之規定，於前項情形準用之。但債權人依第二十六條第一項規定行使權利者，不得逾最後分配表公告日之前一日。
 
-> 釋：一、法院裁定開始清算程序後，應將開始清算程序裁定之主文及其時點、管理人之姓名及地址、債務人之債務人及屬於清算財團之財產持有人負交還財產及通知管理人、法院指定之人之義務、違反交還及通知義務之法律效果、申報及補報債權期間、異議期間、失權效果、債權人會議期日、處所及應議事項等事項公告，使債權人、債務人及其他利害關係人有所知悉，俾便申報債權、出席債權人會議，以利清算程序之進行，爰設第一項。二、第一項公告有關法院酌定申報債權、補報債權之期間、第一項公告及債權人清冊之送達、債權人清冊已記載之債權人及其債權內容之效力等，宜予明定，爰設第二項，明定第一項情形準用本條例第四十七條第二項至第四項之規定。
+> 釋：一、原條文第一項未修正。二、法院裁定開始清算程序時，債務人所定雙務契約，當事人一方尚未完全履行，該契約經依第二十四條規定終止或解除時，可能已逾第二項準用第四十七條第二項規定之債權申報及補報期間，為使債權人得依第二十六條第一項規定行使權利，明定此種情形申報債權期間之起算日。又清算財團之財產經管理人作成最後分配表並經公告，為維程序安定，自不宜許債權人再為申報或補報債權，並為免債權人之申報與最後分配表之公告，在時間上孰先孰後，滋生紛擾，明定其申報或補報債權期限之末日，爰修正第二項。
 
 * 87 法院裁定開始清算程序時，就債務人或清算財團有關之登記，應即通知該管登記機關為清算之登記。管理人亦得持開始清算程序之裁定，向前項登記機關聲請為清算之登記。債務人因繼承、強制執行、徵收、法院之判決，或其他非因法律行為，於登記前已取得不動產物權者，法院得因管理人之聲請，通知登記機關登記為債務人所有。已為清算登記之清算財團財產，經管理人為返還或讓與者，法院得依其聲請，囑託該管登記機關塗銷其清算登記後登記之。
 
@@ -398,9 +410,9 @@
 
 > 釋：為確保債務人重建經濟之機會，避免債務人無從維持生活，爰設本條，授權法院得審酌債務人之生活狀況、清算財團財產之種類及數額、債務人可預見之收入等一切情事後，以裁定擴大自由財產之範圍。又法院審酌上開情事時，除得就該等事項加以調查外，必要時，亦得命債務人、債權人等陳述意見。
 
-* 100 債務人之繼承，在聲請清算後開始者，對債務人僅有限定繼承之效力；其在聲請清算前二個月內開始者，債務人於聲請清算後不得拋棄繼承，並僅有限定繼承之效力。
+* 100 債務人之繼承在聲請清算前三個月內開始者，於聲請清算後不得拋棄繼承。
 
-> 釋：依第九十九條第一項第二款規定，債務人因繼承取得之財產應列入清算財團，惟如被繼承人之債務超過遺產而債務人為概括繼承時，對於清算財團反為不利；如遺產超過債務而債務人拋棄繼承時，亦將使清算財團蒙受損失，為防杜上述情形，明定債務人之繼承，在聲請清算後開始者，對債務人僅有限定繼承之效力，以保障債權人之權益。另為兼顧交易安全，保障善意第三人之權益，債務人之繼承在聲請清算前開始者，如其已為概括繼承或拋棄繼承，即各自發生概括繼承或拋棄繼承之效力。如其繼承在聲請清算前二個月內開始，且其尚未為繼承之拋棄，於聲請清算後，債務人即不得拋棄繼承，並僅發生限定繼承之效力，以防杜對清算財團不利。爰設本條。
+> 釋：配合民法繼承編修正繼承人對於繼承債務僅負限定責任，並刪除限定繼承制度，及修正拋棄繼承之期間，爰修正本條。
 
 * 101 法院裁定開始清算程序後，債務人應將屬於清算財團之財產，記載書面提出於法院及管理人。
 
@@ -442,9 +454,9 @@
 
 > 釋：為發揮對管理人之監督功能，確保債權人之權益，管理人對清算財團如應負賠償責任，應許法院依債權人之聲請或依職權以裁定命其賠償，爰設本條，明定管理人對清算財團應負賠償責任者，準用第九十八條之規定。
 
-* 111 債權之標的如非金錢，或雖為金錢而其金額不確定，或為外國貨幣者，以法院裁定開始清算程序時之估定金額為清算債權之金額；定期金債權之金額或存續期間不確定者，亦同。附期限之清算債權未到期者，於法院裁定開始清算程序時，視為已到期。法院裁定開始清算程序後始到期之債權無利息者，其債權額應扣除自法院裁定開始清算程序時起至到期時止之法定利息。附條件之債權，得以其全額為清算債權。
+* 111 債權之標的如非金錢，或雖為金錢而其金額不確定，或為外國貨幣者，由管理人以法院裁定開始清算程序時之估定金額列入分配。普通保證債權受償額或定期金債權金額或存續期間不確定者，亦同。債權人或債務人對前項估定金額有爭議者，準用第三十六條規定。附條件之債權，得以其全額為清算債權。
 
-> 釋：一、清算債權之種類繁多，為使債權人得依其債權價額及順位公平受償，於清算程序中有使不同種類之清算債權得以金額估定之必要，以確定其債權金額，俾利分配，爰設第一項。二、依民法第三百十六條規定，附期限之債權，債權人不得請求於期限前為清償，惟清算程序進行中，債務人之全部財產權利均已構成清算財團而供所有清算債權分配受償，如清算債權因附期限而不得提前行使權利，則附期限之債權人將無受償之機會，有失公允，爰設第二項，明定附期限之清算債權未到期者，於法院裁定開始清算程序時，視為已到期，俾與一般清算債權為同一之處理。三、附期限未到期之債權，如未約定利息，債權人提前受清償，勢將損害債務人之期限及利息等利益，如不扣除法院裁定開始清算程序時起至到期時止之法定利息，債權人將受有利息之不當得利，影響全體債權人之公平受償，爰設第三項，明定法院裁定開始清算程序後始到期之債權無利息者，其債權額應扣除自法院裁定開始清算程序時起至到期時止之法定利息。四、附停止條件之債權，於清算程序進行中隨時有因條件成就而發生效力之可能，如不予其分配之機會，其債權將無受償之機會；附解除條件之債權，於法院裁定開始清算程序時，已有效成立且債權處於可行使之狀態，自應與一般債權同視，使其得為清算債權而受分配，爰設第四項，明定附條件之債權，得以其全額為清算債權。
+> 釋：一、原條文第一項之債權應由管理人估定之，並以其估定之金額列入分配；又普通保證債權於法院裁定開始清算程序後，債權人對主債務人求償不足額已確定者，固得以該不足受償額全額列入分配，惟如尚未確定，亦有估定之必要，均宜予明定，爰修正第一項。二、為保障債權人得透過集團性之債務清理程序公平受償，並達債務清理之目的，現行條文第二項、第三項關於附期限之債權視為已到期，及開始清算程序後無利息者應扣除中間利息之規定，於更生程序中亦應適用，爰修正移列第三十二條之一第一項、第二項。三、原條文第一項規定之債權，既係由管理人估定其金額，如債權人或債務人對該估定金額有爭議，其處理程序，宜準用第三十六條規定，爰增訂第二項。四、原條文第四項未修正，配合移列第三項。
 
 * 112 在法院裁定開始清算程序前，對於債務人之財產有質權、抵押權、留置權或其他擔保物權者，就其財產有別除權。有別除權之債權人得不依清算程序行使其權利。但管理人於必要時，得將別除權之標的物拍賣或變賣，就其賣得價金扣除費用後清償之，並得聲請法院囑託該管登記機關塗銷其權利之登記。
 
@@ -510,9 +522,9 @@
 
 > 釋：一、清算財團之財產分配完結時，清算程序即可終結，宜課以管理人向法院提出報告之義務，俾法院為清算終結之裁定，爰設第一項。二、清算財團之財產既經最後分配完結，清算程序即可終結，爰設第二項，明定法院接獲管理人關於分配之報告後，應即為清算程序終結之裁定。三、為求程序迅速進行，明定對於法院終結清算程序之裁定不得抗告。惟法院終結清算程序之裁定攸關債權人、債務人及其他利害關係人等之權益，應公告周知，明定該等裁定應公告之。爰設第三項。
 
-* 128 清算財團於最後分配表公告後，復有可分配於債權人之財產時，管理人應聲請法院許可為追加分配。但其財產於清算程序終結之裁定公告之翌日起二年後始發現者，不得分配。前項追加分配準用第一百二十三條之規定。
+* 128 清算程序終止或終結後，發現可分配於債權人之財產時，法院應依管理人之聲請以裁定許可追加分配。但其財產於清算程序終止或終結之裁定確定之翌日起二年後始發現者，不在此限。前項追加分配，於債務人受免責裁定確定後，仍得為之，並準用第一百二十三條規定。第一項情形，清算程序未行申報及確定債權程序者，應續行之。
 
-> 釋：一、清算財團之財產最後分配後，為促使管理人於發現復有可分配於債權人之財產時，繼續辦理追加分配，宜課以聲請許可追加分配之義務，爰設第一項。又本條所指之追加分配，應於支付必要費用後，尚有可分配於債權人之財產時，始得為之。二、實施追加分配之程序應與中間分配、最後分配之程序相同，爰設第二項，明定準用第一百二十四條之規定。
+> 釋：一、原第一百二十八條係就清算程序終結後，發現可分配於債權人財產之追加分配為規定，於清算程序終止之情形，亦可能發現可分配於債權人財產而須辦理追加分配，爰修正第一項。又如未選任管理人者，法院自應逕為許可追加分配之裁定，附此敘明。二、追加分配係就清算財團財產為之，債務人縱已受免責裁定確定，仍無礙於債權人受追加分配，爰修正第二項。三、第八十五條所定清算程序同時終止，尚未進行債權申報及確定程序；第一百二十九條所定清算程序異時終止，如尚未踐行債權申報及確定之程序，於追加分配時均有續行之必要，即法院應依第八十六條規定公告，並進行債權申報、補報及確定等程序，爰增訂第三項。
 
 * 129 法院裁定開始清算程序後，如清算財團之財產不敷清償第一百零八條所定費用及債務時，法院因管理人之聲請或依職權以裁定終止清算程序。法院為前項裁定前，應使管理人及債權人有陳述意見之機會。第一項裁定不得抗告，並應公告之。
 
@@ -530,21 +542,21 @@
 
 > 釋：消費者依清算程序清理債務，於程序終止或終結後，為使其在經濟上得以復甦，以保障其生存權，除本條例另有不予免責之規定外，例如：第一百三十四條、第一百三十五條等，就債務人未清償之債務採免責主義，爰設本條，明定法院為終止或終結清算程序之裁定確定後，應以裁定免除其債務。
 
-* 133 法院裁定開始清算程序後，債務人有薪資、執行業務所得或其他固定收入，而普通債權人之分配總額低於債務人聲請清算前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額者，法院應為不免責之裁定。但債務人證明經普通債權人全體同意者，不在此限。
+* 133 法院裁定開始清算程序後，債務人有薪資、執行業務所得或其他固定收入，扣除自己及依法應受其扶養者所必要生活費用之數額後仍有餘額，而普通債權人之分配總額低於債務人聲請清算前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額者，法院應為不免責之裁定。但債務人證明經普通債權人全體同意者，不在此限。
 
-> 釋：為免債務人濫用清算程序以獲免責，並敦促有清償能力者，利用薪資、執行業務所得或其他固定收入清償債務而受免責，爰以債務人聲請清算前二年間，可處分所得扣除自己及依法應受其扶養者所必要生活費用之數額為計算基礎，以為裁定免責之依據，進而保障債權人可受最低清償，爰設本條。惟於普通債權人全體均同意免除債務人債務之情形，縱渠等分配總額未達上開數額，基於私法自治原則，法院自不得為不免責之裁定，爰設但書予以除外。
+> 釋：原條文規定債務人之薪資、執行業務所得或其他固定收入，本即必須扣除必要生活費用後仍有餘額，始應提出予普通債權人受償。為免爭議，爰修正明定債務人之收入，扣除自己及依法應受其扶養者所必要生活費用之數額後仍有餘額者，始有本條之適用。
 
-* 134 債務人有下列各款情形之一者，法院應為不免責之裁定。但債務人證明經普通債權人全體同意者，不在此限：一、於七年內曾依破產法或本條例規定受免責。二、隱匿、毀損應屬清算財團之財產，或為其他不利於債權人之處分。三、捏造債務或承認不真實之債務。四、因浪費、賭博或其他投機行為，致財產顯然減少或負擔過重之債務，而生開始清算之原因。五、於清算聲請前一年內，已有清算之原因，而隱瞞其事實，使他人與之為交易致生損害。六、明知已有清算原因之事實，非基於本人之義務，而以特別利於債權人中之一人或數人為目的，提供擔保或消滅債務。七、隱匿、毀棄、偽造或變造帳簿或其他會計文件之全部或一部，致其財產之狀況不真確。八、故意於財產及收入狀況說明書為不實之記載，或有其他故意違反本條例所定義務之行為。
+* 134 債務人有下列各款情形之一者，法院應為不免責之裁定。但債務人證明經普通債權人全體同意者，不在此限：一、於七年內曾依破產法或本條例規定受免責。二、隱匿、毀損應屬清算財團之財產，或為其他不利於債權人之處分。三、捏造債務或承認不真實之債務。四、聲請清算前二年內，因消費奢侈商品或服務、賭博或其他投機行為，所支出之總額逾該期間可處分所得扣除自己及依法應受其扶養者所必要生活費用之半數，或所負債務之總額逾聲請清算時無擔保及無優先權債務之半數，而生開始清算之原因。五、於清算聲請前一年內，已有清算之原因，而隱瞞其事實，使他人與之為交易致生損害。六、明知已有清算原因之事實，非基於本人之義務，而以特別利於債權人中之一人或數人為目的，提供擔保或消滅債務。七、隱匿、毀棄、偽造或變造帳簿或其他會計文件之全部或一部，致其財產之狀況不真確。八、故意於財產及收入狀況說明書為不實之記載，或有其他故意違反本條例所定義務之行為。
 
-> 釋：一、消費者依清算程序清理債務，債權人已因之蒙受相當損失，其程序之進行應秉持公正與誠信，如債務人對於清算之原因有可歸責性，或有虛偽不實、違反誠信、違反本條例所定義務之行為，致害及債權人之權益，或影響清算程序之進行，自不宜予以免責，爰設第一項。惟債務人之普通債權人全體同意債務人得免責，基於私法自治原則，法律即無介入保護之必要，爰設但書予以除外。又所謂普通債權人，乃指除有擔保或有優先權以及劣後債權外之無擔保或無優先權之債權人。二、債務人於法院為免責與否之裁定時，七年內曾依破產法或本條例規定受免責者，為避免債務人惡意倒債，一再利用債務清理程序規避清償債務，自不應予以免責，爰設第一款。三、清算制度之目的，在於使各債權人獲得平等之清償，避免債務人遭受多數債權人個別對其強制執行，而無法重建經濟，故債務人應本其至誠，將應屬清算財團之財產交由管理人為公平之管理及處分。債務人如有隱匿、毀損應屬清算財團之財產，或以顯不相當之對價出賣其財產等不利於債權人之處分；捏造債務或承認不真實之債務；隱匿、毀棄、偽造或變造帳簿或其他會計文件之全部或一部，致其財產之狀況不真確等行為，實係圖自己或他人之不法利益，嚴重侵害債權人之權益，自不宜使其免責，爰設第二款、第三款、第七款。四、債務人因浪費、賭博或其他投機行為，致財產顯然減少或負擔過重之債務，而生清算之原因；或明知已有清算之原因，非基於本人之義務，而以特別利於債權人中之一人或數人為目的，提供擔保或消滅債務，均顯見債務人於其經濟狀況不佳之情形下，猶恣意揮霍、投機，甚或提供擔保或消滅債務圖利特定債權人，核其所為，或於清算之原因有可歸責性，或有意增加負擔、減少清算財團之財產，均使多數債權人無端受害，自有加以制止之必要，尚不宜使之免責，爰設第四款、第六款。五、債務人於清算聲請前一年內，已有清算之原因，而隱瞞其事實，使他人與之為交易致生損害，係清算程序進行前之不誠實之行為，其於交易之際，即有藉清算程序規避債務，使交易相對人無法獲完全清償之惡意，自不宜准其免責，爰設第五款。六、債務人故意於財產狀況、收入說明書為不實之記載，或有違反本條例第九條第二項到場義務、第四十一條出席及答覆義務、第八十二條第一項提出財產狀況及收入說明書及債權人、債務人清冊義務、第八十三條第一項報告義務、第九十條生活儉樸及住居限制義務、第一百零二條提出清算財團書面資料義務、第一百零三條第一項移交簿冊、文件及一切財產義務、第一百零四條第一項答覆義務、第一百三十七條第二項協力調查義務等義務，勢必影響清算程序之進行，為使債務人盡其法定義務，俾清算程序順利進行，亦不宜使債務人免責，爰設第八款。
+> 釋：原條文第四款規定，債務人之浪費行為屬不免責之事由，實務上適用結果，債務人多因有此款事由而不獲免責，為免對債務人過度嚴苛，予以適度限縮為消費奢侈商品或服務；並參照第二十條、第四十四條、第六十四條、第八十二條及第一百三十三條等規定，限於債務人於聲請清算前二年內，所為消費奢侈商品或服務等不當行為，始足當之。又原條文規定「致財產顯然減少或負擔過重之債務」，尚欠明確，宜予明定，爰修正第四款。
 
 * 135 債務人有前條各款事由，情節輕微，法院審酌普通債權人全體受償情形及其他一切情狀，認為適當者，得為免責之裁定。
 
 > 釋：免責制度係經濟陷於困境債務人最後之救濟手段，雖其具有不免責事由，惟法院審酌普通債權人全體受償情形及其他一切情狀後，如認免責為適當者，仍得裁量以裁定免責，以利債務人更生而重新出發，爰設本條。
 
-* 136 前三條情形，法院於裁定前應依職權調查，或命管理人調查以書面提出報告，並使債權人、債務人有陳述意見之機會。債務人對於前項調查，應協助之。
+* 136 前三條情形，法院於裁定前應依職權調查，或命管理人調查以書面提出報告，並使債權人、債務人有到場陳述意見之機會。債務人對於前項調查，應協助之。
 
-> 釋：一、為迅速有效調查債務人有無免責或不免責事由、以及有無裁量免責時應審酌之事項，爰設第一項，明定法院得依職權或指揮管理人協助調查，並以書面提出報告於法院。又為使前三條之裁定適當，並保障當事人之程序權，法院於為免責裁定前，應使債權人有陳述意見之機會。反之，法院於不免責裁定前，因裁定結果對債務人不利，亦應使之有陳述意見之機會。二、為有效且迅速為前項之調查，並確保清算程序之公正，應課以債務人協力調查之義務，爰設第二項。
+> 釋：一、為妥適調查債務人有無不免責或裁量免責之事由，並保障免責程序中當事人之聽審請求權，明定法院於裁定前應使債權人、債務人有到場陳述意見之機會，爰修正第一項。二、原條文第二項未修正。
 
 * 137 免責裁定確定時，除別有規定外，對於已申報及未申報之債權人均有效力。對於債務人有求償權之共同債務人、保證人或為其提供擔保之第三人，亦同。前項規定不影響債權人對於債務人之共同債務人、保證人或為其提供擔保之第三人之權利。
 
@@ -569,6 +581,10 @@
 * 142 法院為不免責或撤銷免責之裁定確定後，債務人繼續清償債務，而各普通債權人受償額均達其債權額之百分之二十以上者，法院得依債務人之聲請裁定免責。
 
 > 釋：為鼓勵債務人努力清償債務以獲得免責，法院為不免責之裁定或撤銷免責之裁定確定後，債務人如能繼續清償債務，使各普通債權人受償額均達其債權額之百分之二十以上者，各債權人之債權應已獲相當程度之保障，自宜賦與其重建經濟之機會，爰設本條，明定法院得依債務人之聲請，為免責之裁定。惟法院為裁定時，仍應斟酌債務人不免責事由之情節、債權人受償情形及其他一切情狀，而為准駁，並非當然予債務人免責。
+
+* 142.1 法院為不免責或撤銷免責之裁定確定後，債務人對清算債權人所為清償，應先抵充費用，次充原本。前項規定，於本條例中華民國一百年十二月十二日修正之條文施行前已受前項裁定之債務人，於修正條文施行後所為清償，亦適用之。
+
+> 釋：一、本條新增。二、債務人經法院為不免責或撤銷免責之裁定確定後，仍應為清償，為鼓勵其繼續清償，關於其清償之抵充順序，使之先抵充費用、次充原本，不受民法第三百二十三條所定先抵充利息之限制，且對所有清算債權人（包括有擔保或有優先權之債權人及普通債權人）所為清償均有其適用，該受清償部分不再繼續發生利息，得減輕債務人之負擔，增加免責之機會，爰增訂第一項。至於利息、違約金之抵充順序則依民法第三百二十三條規定，於抵充費用、原本後先抵充利息，次充違約金，附此敘明。三、債務人於本條例一百年十二月十二日修正之條文施行前受法院裁定不免責或撤銷免責確定者，本於第一項規定意旨，明定其於修正之條文施行後所為之清償，得適用修正施行後之規定，爰增訂第二項。至於修正之條文施行前已發生抵充效力部分，不因此而受影響，自不待言。
 
 * 143 於免責裁定確定後，至撤銷免責之裁定確定前對債務人取得之債權，有優先於清算債權受清償之權利。
 
@@ -602,13 +618,13 @@
 
 > 釋：法人經選任為監督人或管理人者，其實際執行職務者，多為其負責人、代理人、受僱人或其他職員，如渠等於執行業務時，有第一百四十九條、第一百五十條所定情形，除其本身應依各該條規定處罰外，對於該法人，亦科以各該條規定之罰金，以促其履行監督其負責人、代理人、受僱人或其他職員公正執行職務之義務，爰設本條，明定採行兩罰原則。
 
-* 151 債務人對於金融機構因消費借貸、自用住宅借款、信用卡或現金卡契約而負債務，在聲請更生或清算前，應提出債權人清冊，以書面向最大債權金融機構請求協商債務清償方案，並表明共同協商之意旨。債務人為前項請求時，視為同意或授權受請求之金融機構，得向稅捐或其他機關、團體查詢其財產、收入、業務及信用狀況。第一項受請求之金融機構，應即通知其他債權人與債務人為債務清償之協商，並將前項查詢結果供其他債權人閱覽或抄錄。協商成立者，應以書面作成債務清償方案，由當事人簽名、蓋章或按指印；協商不成立時，應付與債務人證明書。債務人與金融機構協商成立者，不得聲請更生或清算。但因不可歸責於己之事由，致履行顯有重大困難者，不在此限。本條例施行前，債務人依金融主管機關協調成立之中華民國銀行公會會員，辦理消費金融案件無擔保債務協商機制與金融機構成立之協商，準用前項之規定。
+* 151 債務人對於金融機構負債務者，在聲請更生或清算前，應向最大債權金融機構請求協商債務清償方案，或向其住、居所地之法院或鄉、鎮、市、區調解委員會聲請債務清理之調解。債務人為前項請求或聲請，應以書面為之，並提出財產及收入狀況說明書、債權人及債務人清冊，及按債權人之人數提出繕本或影本。第四十三條第二項、第五項及第六項規定，於前項情形準用之。債權人為金融機構者，於協商或調解時，由最大債權金融機構代理其他金融機構。但其他金融機構以書面向最大債權金融機構為反對之表示者，不在此限。債權人為金融機構、資產管理公司或受讓其債權者，應提出債權說明書予債務人，並準用第三十三條第二項第一款至第四款規定。債務人請求協商或聲請調解後，任一債權金融機構對債務人聲請強制執行，或不同意延緩強制執行程序，視為協商或調解不成立。協商或調解成立者，債務人不得聲請更生或清算。但因不可歸責於己之事由，致履行有困難者，不在此限。第七十五條第二項規定，於前項但書情形準用之。本條例施行前，債務人依金融主管機關協調成立之中華民國銀行公會會員，辦理消費金融案件無擔保債務協商機制與金融機構成立之協商，準用前二項之規定。
 
-> 釋：一、為使債務人得自主解決其債務，爰設本條，明定債務人對於金融機構因消費借貸、自用住宅借款、信用卡或現金卡契約而負債務之情形，採行協商前置主義，債務人於聲請更生或清算前，應先行提出債權人清冊，以書面向其負債務之任一金融機構請求協商債務清償方案。又債務人請求協商債務清償方案時，得就近向其負債務之任一金融機構總行或分行為之，尚不以總行為限。二、為協商之必要，債務人之財產、收入、業務及信用狀況，宜使債權人明瞭，參照稅捐稽徵法有關納稅義務人授權、電腦處理個人資料保護法有關當事人書面同意等規定，明定債務人請求協商時，視為同意或授權受請求之金融機構得向稅捐或其他機關、團體（例如：地政機關、聯合徵信中心等）查詢之，爰設第二項。三、為便利債務人統一清理其債務，受債務人請求協商債務清償方案之金融機構，應即通知其他債權人與債務人為債務清償方案之協商，並將其查詢債務人之財產、收入、業務及信用狀況之結果供其他債權人閱覽或抄錄，爰設第三項。至其他債權人因閱覽、抄錄所生費用（例如：影印費等），提供閱覽、抄錄之金融機構得自行決定是否收費。四、債務清償方案協商成立者，攸關參與協商債權人、債務人之權益，為求慎重，債務清償方案應作成書面，並由當事人簽名、蓋章或按指印，於符合此等要式行為後，該債務清償方案始行成立。又協商不成立者，為便於債務人得據以聲請更生或清算，明定債權人應付與債務人協商不成立之證明書，俾其證明業經協商程序，爰設第四項。
+> 釋：一、本條例施行後，前置協商制度已發揮一定效用，為節省法院及當事人勞費，應予保留。為提供債務人其他程序選擇，增設前置調解程序，爰修正本條作為前置協商及前置調解程序之共通規定。又為擴大債務人與金融機構間前置協商及調解程序之適用範圍，刪除債務人請求協商或聲請調解之債務種類限制，爰修正第一項。至於債務人與債權人得就有擔保、優先權之債權或其他債權分別約定不同之清償方案，乃屬當然，附此敘明。二、配合本條修正為前置協商及前置調解之共通規定，原條文第二項至第四項關於前置協商程序之規定，修正移列第一百五十一條之一第一項、第二項及第四項。三、債務人應以書面請求協商或聲請調解，並提出財產及收入狀況說明書、債權人及債務人清冊，並按債權人之人數提出繕本或影本，俾債權金融機構或調解委員及其他債權人明瞭債務人之財產、收入及負債狀況，以利協商或調解之進行，並明定債務人提出之上開應備文件之格式及其內容，準用更生程序中債務人應備文件之相關規定，爰增訂第二項、第三項。四、依金融機構辦理消費者債務清理條例前置協商作業準則規定，債權人如有多數金融機構者，於前置協商程序中由最大債權金融機構與債務人協商，如其他債權金融機構同意還款協議，係授權財團法人金融聯合徵信中心套印相關債權金融機構「前置協商專用印」電子檔印文於相關文書（PDF 檔）上，供最大債權金融機構下載。惟前置調解程序中並無此項電子檔印文授權機制，且為節省前置協商程序中之電子授權程序，明定除其他債權金融機構以書面向最大債權金融機構為反對之表示外，應由最大債權金融機構代理其他金融機構進行前置協商及調解程序，爰增訂第四項。至於其他金融機構反對由最大債權金融機構代理者，應由其自行或委任他代理人進行協商或調解，自屬當然。五、為使債務人及調解委員明瞭債務人積欠債權金融機構之債務本金、利息、違約金，及已清償金額抵充費用、利息、本金之數額、計算方式，以促成協商或調解成立，債權金融機構、資產管理公司或受讓其債權者，於協商或調解程序中應依第三十三條第二項第一款至第四款向債務人提出債權說明書，爰增訂第五項。六、依目前金融機構辦理消費者債務清理條例前置協商作業準則，金融機構皆採一致作法。債務人請求協商或聲請調解後，如有任一債權金融機構對債務人聲請強制執行，顯將致協商或調解無從繼續進行，並將致其他債權人未能受公平清償，自應視為協商或調解不成立；已經開始強制執行之債權金融機構不同意延緩強制執行程序者，亦然，爰增訂第六項。七、債務人與債權人成立協商或調解後，即應依誠信原則履行，故應限制於債務人因不可歸責於己之事由，致履行顯有重大困難時，始得聲請更生或清算，俾債務人盡力履行協商或調解方案，避免任意毀諾。又債務人如有第七十五條第二項之情形，自應推定其有不可歸責於己之事由，致履行顯有重大困難，爰將原條文第五項修正移列第七項，另增訂第八項。八、原條文第六項準用第五項規定，修正為準用第七項、第八項規定，並移列第九項。
 
-* 151.1 前條債務經金融機構出售予資產管理公司，如債務人依前條規定提出協商並成立者，資產管理公司應依該協商條件辦理。
+* 151.1 債務人請求協商時，視為同意或授權受請求之金融機構，得向稅捐或其他機關、團體查詢其財產、收入、業務及信用狀況。前項金融機構應即通知其他債權人與債務人為債務清償之協商，並將前項查詢結果供其他債權人閱覽或抄錄。債權人之債權移轉於第三人者，應提出相關證明文件，由受請求之金融機構通知該第三人參與協商。協商成立者，應以書面作成債務清償方案，由當事人簽名、蓋章或按指印；協商不成立時，應於七日內付與債務人證明書。
 
-> 釋：一、本條新增。二、債務經金融機構出售予資產管理公司時，如債務人提出協商並經成立者，該資產管理公司即應依協商條件辦理。
+> 釋：一、為配合原條文第一百五十一條修正為前置協商及前置調解程序之共通規定，爰將原條文第一百五十一條第二項、第三項關於前置協商程序之規定修正移列為本條第一項、第二項。二、實務上因最大債權銀行常未通知資產管理公司參與協商，或僅通知資產管理公司自行與債務人協商，亦有資產管理公司收受協商通知時不參與協商，致增加債務人於協商成立後之履行困難，宜明定債權人之債權移轉於第三人時（包括債權讓與及法定債之移轉），應提出相關證明文件，由受請求之金融機構通知該第三人參與協商，以促資產管理公司參與協商程序，爰修正原條文第一百五十一條之一，並移列為本條第三項。三、債務人與債權人協商不成立時，受請求之債權金融機構應儘速付與不成立證明書，以便債務人聲請更生或清算，明定債權金融機構付與證明書之期間，爰將原條文第一百五十一條第四項修正移列為本條第四項。
 
 * 152 前條第一項受請求之金融機構應於協商成立之翌日起七日內，將債務清償方案送請金融機構所在地之管轄法院審核。但當事人就債務清償方案已依公證法第十三條第一項規定，請求公證人作成公證書者，不在此限。前項債務清償方案，法院應儘速審核，認與法令無牴觸者，應以裁定予以認可；認與法令牴觸者，應以裁定不予認可。前項裁定，不得抗告。債務清償方案經法院裁定認可後，得為執行名義。
 
@@ -618,23 +634,27 @@
 
 > 釋：為免協商程序之延滯影響債務人清理債務，債權人如遲不開始協商，或債務清償方案遲未能協商成立，應許債務人逕向法院聲請更生或清算，以儘速清理其債務，早日重建其經濟生活，爰設本條。
 
-* 154 債務清償方案協商成立後，債務人經法院裁定開始更生或清算程序，債權人依債務清償方案未受全部清償者，仍得以其在協商前之原有債權，加入更生或清算程序；其經法院裁定開始清算程序者，應將債權人已受清償部分，加算於清算財團，以定其應受分配額。前項債權人，應俟其他債權人所受清償與自己已受清償之程度達同一比例後，始得再受清償。
+* 153.1 債務人依第一百五十一條第一項聲請法院調解，徵收聲請費新臺幣一千元。債務人於法院調解不成立之日起二十日內，聲請更生或清算者，以其調解之聲請，視為更生或清算之聲請，不另徵收聲請費。債權人之債權移轉於第三人者，應提出相關證明文件，由法院或鄉、鎮、市、區調解委員會通知該第三人參與調解。
 
-> 釋：一、債務清償方案協商成立後，債務人尚未完全履行債務清償方案，而經法院裁定開始更生或清算程序時，為求全體債權人之公平受償，未依債務清償方案受全部清償之債權人，仍得以其協商前之原有債權，加入更生或清算程序。其經法院裁定開始清算程序者，應將債權人已受清償部分加算於清算財團，以定其應受分配額，爰設第一項。至依債務清償方案受全部清償之債權，其債權業因清償而消滅，尚無適用本條規定之餘地。二、第一項之債權人如已依債務清償方案受部分清償，應視同於更生或清算程序受清償，為求公平，自應俟其他債權人所受之分配與其已受清償之程度達同一比例後，始得再受分配，以保障其他債權人之權益，爰設第二項。
+> 釋：一、本條新增。二、民事訴訟法第七十七條之二十規定，向法院聲請調解，依其聲請之標的金額或價額，徵收聲請費新臺幣一千元至五千元不等，其徵收標準高於本條例規定之聲請費，為減輕債務人負擔，爰設第一項、第二項，明定債務人依本條例向法院聲請債務清理調解者，徵收聲請費新臺幣一千元，及調解不成立後二十日內聲請更生或清算，不另徵收聲請費。另依鄉鎮市調解條例第二十三條規定，調解除勘驗費應由當事人核實開支外，不得徵收任何費用。於鄉、鎮、市、區調解委員會行前置調解程序，亦不徵收費用，附此敘明。三、債權人之債權移轉於第三人者（包括債權讓與及法定債之移轉），應於前置調解程序中提出相關證明文件，由法院或鄉、鎮、市、區調解委員會通知第三人參與調解，以協助債務人清理其債務，爰設第三項。四、至債務人與債權人於法院及鄉、鎮、市、區調解委員會調解成立之效力，分別依民事訴訟法及鄉鎮市調解條例之相關規定定之，自不待言。
+
+* 154 債務清償方案協商或調解成立後，債務人經法院裁定開始更生或清算程序，債權人依債務清償方案未受全部清償者，仍得以其在協商或調解前之原有債權，加入更生或清算程序；其經法院裁定開始清算程序者，應將債權人已受清償部分，加算於清算財團，以定其應受分配額。前項債權人，應俟其他債權人所受清償與自己已受清償之程度達同一比例後，始得再受清償。
+
+> 釋：一、配合本條例第一百五十一條增訂前置調解程序，爰修正第一項。二、原條文第二項未修正。
 
 * 155 本條例施行前不能清償債務之事件，已由法院依破產法之規定開始處理者，仍依破產法所定程序終結之。
 
 > 釋：本條例施行前，不能清償債務之事件，已由法院依破產法之規定開始處理者，應依何一程序進行，宜予明定，爰設本條過渡性規定，明定該等事件仍依破產法所定程序終結之，俾利遵循。
 
-* 156 消費者於本條例施行前受破產宣告者，得依本條例之規定，為免責或復權之聲請。
+* 156 消費者於本條例施行前受破產宣告者，得依本條例之規定，為免責或復權之聲請。本條例中華民國一百年十二月十二日修正之條文施行前，消費者依第一百三十四條第四款規定受不免責裁定者，得於修正條文施行之日起二年內，為免責之聲請。
 
-> 釋：消費者於本條例施行前受破產宣告者，如其符合本條例所定免責或復權之規定時，自許其依本條例之規定為免責或復權之聲請，以重建更生，爰設本條。
+> 釋：一、原條文未修正，移列第一項。二、本條例一百年十二月十二日修正條文施行前已經法院依本條例第一百三十四條第四款規定裁定不免責之債務人，雖無再重複進行原已終止或終結清算程序之實益，惟為使其仍得重建經濟生活，及避免法律關係久懸不決，無論該裁定是否確定，明定其得於修正條文施行之日起二年內，依修正後之規定聲請免責，爰增訂第二項。至於修正條文施行前已經法院裁定不免責，經提起抗告，或尚未經法院裁定者，均應適用修正後之規定，自屬當然。
 
 * 157 本條例施行細則，由司法院定之。
 
 > 釋：有關本條例施行之細則，宜授權由司法院定之，爰設本條。
 
-* 158 本條例自公布日後九個月施行。本條例中華民國一百年一月十日修正條文自公布日施行。本條例於中華民國一百年一月十日修正施行前，債務人已依第一百五十一條規定提出協商並成立者，資產管理公司應比照該協商條件逕向債務人協商。
+* 158 本條例自公布日後九個月施行。本條例修正條文自公布日施行。
 
-> 釋：一、第一項未修正二、明訂本次修正條文之施行日期，爰增列第二項「本條例中華民國一百年一月十日修正條文自公布日施行。」三、配合本條例增訂第一百五十一條之一，爰增設本條。使修正通過前已前置協商成立，且負擔資產管理公司債務者，亦得比照協商方案還款。
+> 釋：一、原條文第一項未修正。二、明定本條例修正條文之施行日期，爰修正第二項。三、原條文第三項規定之文義究係指資產管理公司應依協商方案之債權清償比例與債務人協商，或依協商方案之每期債權清償金額與債務人協商，或資產管理公司應受已成立協商之拘束，實有不明，且協商之性質乃私法上和解契約，此項規定僅有宣示意義，並無法律效果，無規定之必要，爰予刪除。
 
