--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -676,9 +676,9 @@
 
 > 釋：一、本條第二項係屬增訂。二、發生財務困難之上市、上櫃公司，其董監事多將持股質押以求護盤，使持股質押比例往往較一般公司高；但股價下跌時，為免遭銀行催補擔保品，又再大肆借貸力守股價，惡性循環之結果導致公司財務急遽惡化，損害投資大眾權益。為健全資本市場與強化公司治理，實有必要對設質比重過高之董事、監察人加強控管。特修正「公司法」第一百九十七條之一，若公開發行股票之公司董事以股份設定質權超過選任當時所持有之公司股份數額二分之一時，其超過之股份不得行使表決權，不算入已出席股東之表決權數。藉此杜絕企業主炒作股票之動機與歪風，及防止董監事信用過度膨脹、避免多重授信。
 
-* 198 股東會選任董事時，除公司章程另有規定外，每一股份有與應選出董事人數相同之選舉權，得集中選舉一人，或分配選舉數人，由所得選票代表選舉權較多者，當選為董事。第一百七十八條之規定，對於前項選舉權，不適用之。
+* 198 股東會選任董事時，每一股份有與應選出董事人數相同之選舉權，得集中選舉一人，或分配選舉數人，由所得選票代表選舉權較多者，當選為董事。第一百七十八條之規定，對於前項選舉權，不適用之。
 
-> 釋：按董事之選任方式，係屬公司內部自治事宜，修正第一項，增列「除公司章程另有規定外」，俾為彈性處理。
+> 釋：現行公司法第一百九十八條將公司選任董事之選舉方法授權予公司章程規定，但部分公司經營者以及股權相對多數者，利用修改公司章程之方式，將選任公司董事之選舉法，變更為「全額連記法」，不僅違反「股東平等原則」，影響股東投資意願，更使公司失去制衡的力量變成一言堂，變成萬年董事會、萬年董事長，讓公司治理徹底崩盤，因此提出修法，以匡正弊端。
 
 * 199 董事得由股東會之決議，隨時解任；如於任期中無正當理由將其解任時，董事得向公司請求賠償因此所受之損害。股東會為前項解任之決議，應有代表已發行股份總數三分之二以上股東之出席，以出席股東表決權過半數之同意行之。公開發行股票之公司，出席股東之股份總數不足前項定額者，得以有代表已發行股份總數過半數股東之出席，出席股東表決權三分之二以上之同意行之。前二項出席股東股份總數及表決權數，章程有較高之規定者，從其規定。
 
